--- a/styles/meetings.css
+++ b/styles/meetings.css
@@ -34,8 +34,8 @@
 .dark-mode {
     --color-white: #f3f3f3;
 
-    --color-background: #1b1a1c;
-    --color-background-complement: #1e1d1f;
+    --color-background: #242430;
+    --color-background-complement: #1c1c26;
 
     --color-text: #fafafa;
     --color-text-complement: #9a9a9a;
