--- a/styles/style.css
+++ b/styles/style.css
@@ -26,12 +26,12 @@
 .dark-mode {
     --color-white: #f3f3f3;
 
-    --color-background: #1b1a1c;
-    --color-background-complement: #1e1d1f;
+    --color-background: #242430;
+    --color-background-complement: #1c1c26;
 
     --color-text: #fafafa;
-    --color-text-complement: #9a9a9a;
-    --color-text-unimportant: #494949;
+    --color-text-complement: #72707e;
+    --color-text-unimportant: #696969;
 
     --color-primary: #292938;
     --color-secondary: #20202c;
